A better fix for the I.E. 8 overflow problem. Thanks to Dan Zahlis! In .portlet, changing "overflow" to "overflow-y" solves the problem without creating a problem in Chrome.
git-svn-id: http://roundedblue-mediawiki-skin.googlecode.com/svn/trunk/roundedblue@6 b9d121fe-b767-583e-0e2e-2dac0a498c83

--- a/roundedblue/main.css
+++ b/roundedblue/main.css
@@ -722,8 +722,8 @@ special external link styling */
 	margin: 0 0 .5em;
 	padding: 0;
 	float: none;
-	width: 100%;
-	overflow: hidden;
+	width: 200px;
+    overflow-y: hidden; 
 }
 .portlet h4 {
 	font-size: 95%;
